# pretty-history

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
pretty_history/: cleaning.py  main.py  prettyhist.py
tests/: test_pretty_history.py
tests/resources/: general_in.json  general_in_file.json  general_out.md
